# licenses-everywhere

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup_poetry.sh
licenses_everywhere/: __init__.py  cli.py  config.py  core.py  github_client.py  license_manager.py  repo_handler.py
licenses_everywhere/templates/: apache-2.0.txt  mit.txt
tests/: __init__.py  test_config.py  test_core.py  test_license_manager.py  test_repo_handler.py
